--- a/manuscript/refs.bib
+++ b/manuscript/refs.bib
@@ -79,6 +79,24 @@
 	publisher={Verein zur F{\"o}rderung des Open Access Publizierens in den Quantenwissenschaften}
 }
 
+@book{doucet2001sequential,
+	title={Sequential Monte Carlo methods in practice},
+	author={Doucet, Arnaud and De Freitas, Nando and Gordon, Neil James and others},
+	volume={1},
+	number={2},
+	year={2001},
+	publisher={Springer}
+}
+
+@incollection{berzuini2001resample,
+	title={RESAMPLE-MOVE filtering with cross-model jumps},
+	author={Berzuini, Carlo and Gilks, Walter},
+	booktitle={Sequential Monte Carlo Methods in Practice},
+	pages={117--138},
+	year={2001},
+	publisher={Springer}
+}
+
 @Manual{wes,    title = {wesanderson: A Wes Anderson Palette Generator},    author = {Karthik Ram and Hadley Wickham},    year = {2018},    note = {R package version 0.3.6},    url = {https://CRAN.R-project.org/package=wesanderson},  }
 
 @article{akiyama2022first,
